FLY-1387 issue fixed

--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -918,20 +918,23 @@
 }
 
 
-::ng-deep.addSourceModalComponent{
-    .modal-header {
-        padding: 0 !important;
-        height: auto !important;
-        background-color: transparent !important;
-        .header-title{     
-            margin: 0;
-            position: absolute;            
-            top: 13px;
-            left: 30px;
-            .closeCross{
+::ng-deep.addSourceModalComponent{  
+    .seach_add_feild{
+        display: flex;
+        align-items: center;     
+        .kr-sg-input-search{
+            margin-right: 12px;
+        }  
+        .seach-block{
+            color: #202124;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 12px;                 
+            img{
+                margin-right: 7px;
                 cursor: pointer;
             }
-        }         
+        }
     }
     .empty-source-modal{
         height: 100%;
