--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -541,35 +541,39 @@
 </div>
 
 
-<kr-modal modalType="center" modalClass="addSourceModalComponent" #statusModalPop>
-    <div class="modal-header modal-table-actions">               
-        <div class="table-action-header row m-0 justify-content-end"> 
-               
-            <div class="d-flex align-items-center">
-                <div class="kr-sg-input-search">                               
-                    <input type="text" name='searchSources' placeholder="Search" id="searchContentSources" class="input-search" [(ngModel)]="searchSources" autocomplete="off">
-                    <img *ngIf="!searchSources" src="assets/images/search_gray.svg" class="search-icon">
-                    <img *ngIf="searchSources" src="assets/images/close.svg" class="search-icon close-modal">                
-                </div>           
-                              
-                  <div class="kr-sg-dropdowns d-none">            
+<kr-modal modalType="center" modalClass="addSourceModalComponent modal_popups_" #statusModalPop>
+    <div class="modal-header">
+        <div class="title">Extracts</div>
+        <div class="close_icon" (click)='closeStatusModal()'><img src="assets/icons/modal-close.svg"></div>     
+    </div>
+    <div class="modal-table-actions">               
+        <div class="table-action-header d-flex justify-content-between align-items-center">                           
+            <div>                            
+                <div class="seach_add_feild">
+                    <div class="kr-sg-input-search">                               
+                        <input type="text" name='searchSources' placeholder="Search" id="searchContentSources" class="input-search pl-2" [(ngModel)]="searchSources" autocomplete="off">                                   
+                    </div>
+                    <div class="seach-block" (click)="toggleSearch()">
+                        <img *ngIf="!searchSources" src="assets/icons/search.svg">
+                        <img *ngIf="searchSources" src="assets/images/close.svg">Search
+                    </div>
+                </div>
+
+                <div class="kr-sg-dropdowns d-none">            
                     <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><img src="assets/icons/sidemenu/plus-table.svg">Add FAQs</button>                                            
                         <ul class="dropdown-menu content-menu">                                                              
-                          <li (click)="addFaqSource('faqWeb')">Web URL</li>
-                          <li (click)="addFaqSource('faqDoc')">Upload File</li>
+                            <li (click)="addFaqSource('faqWeb')">Web URL</li>
+                            <li (click)="addFaqSource('faqDoc')">Upload File</li>
                         </ul>
                     </div>
-                  </div>
-                  <div class="close-modal ml-2 pl-1">
-                    <div class="close_modal" (click)='closeStatusModal()'><img src="assets/icons/modal-close.svg"></div>
-                  </div>
-                  <div *ngIf="currentView === 'list'" class="grid-list-view-table" (click)="currentView='grid'"><img src="assets/icons/grid-view.svg"></div>
-                  <div *ngIf="currentView === 'grid'" class="grid-list-view-table" (click)="currentView='list'"><img src="assets/icons/list-view.svg"></div>
-                
+                </div>                                      
             </div>
-        </div> 
-     
+            <div>
+                <div *ngIf="currentView === 'list'" class="grid-list-view-table" (click)="currentView='grid'"><img src="assets/icons/grid-view.svg"></div>
+                <div *ngIf="currentView === 'grid'" class="grid-list-view-table" (click)="currentView='list'"><img src="assets/icons/list-view.svg"></div>                
+            </div>
+        </div>      
     </div>
    
     <div *ngIf="!(resources && resources.length)" class="empty-source-modal">
