--- a/findly-builder/src/app/scss/variables/variables.scss
+++ b/findly-builder/src/app/scss/variables/variables.scss
@@ -495,6 +495,31 @@ input::placeholder{
 			border: 0;
 		}
 	}
+
+	.toast-info {
+		background-color: #F3F8FF;
+		max-width: 544px;
+		min-width: 230px;
+		width: auto !important;
+		box-shadow: none !important;
+		color: #07377F !important;
+		border: 1px solid #85B7FE;
+		border-left: 4px solid #85B7FE;
+		font-size: 14px;
+		padding: 10px !important;
+		padding-right: 25px !important;
+		// background-image: none !important;
+		.toast-close-button{
+			color: #07377F !important;
+			height: 10px !important;
+			background-color: transparent;
+			position: absolute;
+			width: 10px;
+			right: 10px;
+			padding: 0;
+			border: 0;
+		}
+	}
 }
 
 //ProTip 
