--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -97,7 +97,7 @@
   <form [formGroup]="form">
     <div class="kr-sg-input-text mb-15">
       <div class="label-text">Question</div>
-      <input type="text" placeholder="Enter your question" class="input-text" formControlName="question" autocomplete="off">             
+      <input type="text" placeholder="Enter Your Question" class="input-text" formControlName="question" autocomplete="off">             
     </div>
     <!-- <div for="tagInput" class="label-text">Key Terms</div>
     <mat-form-field class="example-chip-list mb-15" [floatLabel]="'never'">
