--- a/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.html
@@ -22,11 +22,11 @@
   <div class="btns-data">
     <!-- <button class="kr-sg-button-primary btn_lg mr-10">Confirm</button>
     <button class="kr-sg-button-secondary btn_lg mr-10">Cancel</button> -->
-    <button *ngFor="let item of data.buttons" [disabled]="isSelected" (click)="onClickOption(item)" class="kr-sg-button-primary btn_md" [ngClass]="{'kr-sg-button-secondary': (item.label==='Cancel') || (item.primaryBtn),'dangerBtn':item.label==='Proceed'}">      
+    <button *ngFor="let item of data.buttons" [disabled]="isSelected" (click)="onClickOption(item)" class="kr-sg-button-primary btn_md" [ngClass]="{'kr-sg-button-secondary': (item.label==='Cancel') || (item.primaryBtn),'dangerBtn':item.label==='Delete'}">      
       <ng-template #cancel>
         {{item.label}} 
      </ng-template>
-     <span *ngIf="item.label=='Delete'|| item.label=='OK'; else cancel"> Proceed</span>      
+     <span *ngIf="item.label=='Delete'|| item.label=='OK'; else cancel"> Delete</span>      
       <div class="loader-in-button ml-2"*ngIf="item.key === 'save' && isSelected" style="display: inline-block"><img src="assets/images/icons/fa-spinner.svg"></div>
     </button>
   </div>
