--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -54,10 +54,10 @@
     <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" src="assets/images/businessrules-empty.svg"></div>
     <ng-container >
         <div class="empty-title">You haven’t added any rules yet!</div>
-        <div class="desc-text"> Rule is powerful tool to personalize and fine-tue search results. Search Assistant allows you to define rules based on Search , Page and User-contexts. Rules can also be used for merchandising and promotions. 
+        <div class="desc-text"> Rule is powerful tool to personalize and fine-tune search results. SearchAssist allows you to define rules based on Search , Page and User-contexts. Rules can also be used for merchandising and promotions. 
         </div>
         <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">                                         
-            <button class="kr-sg-button-primary" (click)="createNewRule()">Add Rule</button>                                            
+            <button class="kr-sg-button-primary" (click)="createNewRule()">Add Rules</button>                                            
         </div>
     </ng-container>
     <ng-container *ngIf="noItems && emptySearchResults">
