business rules and field management issues fixed

--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -40,7 +40,7 @@
     </div>
     <div class="col-8 right-sec p-0" *ngIf="selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedCount">
       <button class="kr-sg-button-danger btn_lg" (click)="deleteMultiePop()">
-        {{ "delete" | translate }}
+        {{ "businessRules.delete" | translate }}
       </button>
     </div>
   </div>
