--- a/findly-builder/src/app/components/stop-words/stop-words.component.html
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.html
@@ -24,10 +24,38 @@
             <button class="kr-sg-button-primary btn_lg" (click)="addStopWord()" [disabled]="validation.duplicate || validation.spaceFound || !newStopWord">{{'stopWords.add'| translate}}</button>
         </div>
      </div> 
-      <div class="empty_screen_data" *ngIf="!(stopwords && stopwords.length) && !loadingContent && !createFromScratch">
-        <ng-container>
-          <perfect-scrollbar class="scoll-empty-screen">
-            <div class="empty-landing-screen" *ngIf="!showAddStopWordsContainer">
+
+     <div class="empty-stopwords" *ngIf="showAddStopWordsContainer">
+      <div class="main_heading">{{'stopWords.lets_start_by_adding_stop_words'| translate}}</div>
+      <div class="desc_info">{{'stopWords.select_on_how_would_you_like_to_add_stop_words'| translate}}</div>
+      <div class="radio-sec">
+        <div class="radio_block">            
+          <div class="kr-sg-radiobutton">
+            <input id="defaultStopWords" value="default" name="defaultStopWords" [(ngModel)]="stopWordsIntiType" class="radio-custom" type="radio" checked>
+            <label for="defaultStopWords" class="radio-custom-label">
+              <div class="label_heading">{{'stopWords.default_stop_words'| translate}}</div>
+              <div class="lable_dec">{{'Eg. if, me, I, can, don’t, not, won’t, should, would, isn’t, may, am, etc...'| translate}}</div>
+            </label>
+          </div>
+        </div>
+        <div class="radio_block">
+          <div class="kr-sg-radiobutton">
+            <input id="customStopWords" value="scratch" name="customStopWords" [(ngModel)]="stopWordsIntiType" class="radio-custom" type="radio">
+            <label for="customStopWords" class="radio-custom-label">
+              <div class="label_heading">{{'stopWords.start_from_scratch'| translate}}</div>
+              <div class="lable_dec">{{'stopWords.add_custom_stop_words' | translate}}</div>
+            </label>
+          </div> 
+        </div>
+      </div>
+      <div class="text-center">
+        <button class="kr-sg-button-primary btn_lg" (click)="createInit()">{{'stopWords.Continue' | translate}}</button>
+      </div>
+      </div>  
+      <ng-container *ngIf="!(stopwords && stopwords.length) && !loadingContent && !createFromScratch">
+        <div class="empty_screen_data">
+          <perfect-scrollbar class="scoll-empty-screen" *ngIf="!showAddStopWordsContainer">
+            <div class="empty-landing-screen">
               <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" src="assets/images/stopwords-empty.svg"></div>   
               <div class="empty-title">You haven’t added any Stop words yet!</div>
               <div class="desc-text"> Stop words are a set of common words (such as the, a, to, all) that dilutes the importance of keywords in a search query. SearchAssist allows you to use either the default set of stop words or add a custom set as per your need.</div>
@@ -40,36 +68,9 @@
                   <div class="desc-text">Your Search Query doesn't match with any record.</div>
               </ng-container>
             </div>
-          </perfect-scrollbar>  
-          </ng-container>
-        <div class="empty-stopwords" *ngIf="showAddStopWordsContainer">
-          <div class="main_heading">{{'stopWords.lets_start_by_adding_stop_words'| translate}}</div>
-          <div class="desc_info">{{'stopWords.select_on_how_would_you_like_to_add_stop_words'| translate}}</div>
-          <div class="radio-sec">
-            <div class="radio_block">            
-              <div class="kr-sg-radiobutton">
-                <input id="defaultStopWords" value="default" name="defaultStopWords" [(ngModel)]="stopWordsIntiType" class="radio-custom" type="radio" checked>
-                <label for="defaultStopWords" class="radio-custom-label">
-                  <div class="label_heading">{{'stopWords.default_stop_words'| translate}}</div>
-                  <div class="lable_dec">{{'Eg. if, me, I, can, don’t, not, won’t, should, would, isn’t, may, am, etc...'| translate}}</div>
-                </label>
-              </div>
-            </div>
-            <div class="radio_block">
-              <div class="kr-sg-radiobutton">
-                <input id="customStopWords" value="scratch" name="customStopWords" [(ngModel)]="stopWordsIntiType" class="radio-custom" type="radio">
-                <label for="customStopWords" class="radio-custom-label">
-                  <div class="label_heading">{{'stopWords.start_from_scratch'| translate}}</div>
-                  <div class="lable_dec">{{'stopWords.add_custom_stop_words' | translate}}</div>
-                </label>
-              </div> 
-            </div>
-          </div>
-          <div class="text-center">
-            <button class="kr-sg-button-primary btn_lg" (click)="createInit()">{{'stopWords.Continue' | translate}}</button>
-          </div>
-        </div>  
-      </div>         
+          </perfect-scrollbar>          
+        </div>
+      </ng-container>               
       <ng-container>
       <div class="listingHeader row m-0" *ngIf="stopwords && stopwords.length">
         <div class="col-5 p-0" >
@@ -84,7 +85,7 @@
             <img *ngIf="!showSearch" class="search-icon" src="assets/icons/search_black.svg">
             <span *ngIf="!showSearch" class="label_txt">{{'stopWords.Search'| translate}}</span>
           </div>  
-          <div class="kr-sg-dropdowns w-auto exportdropdown" *ngIf="(stopwords && stopwords.length)" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
+          <div class="kr-sg-dropdowns w-auto exportdropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
             <div class="dropdown dropdown-open">
                 <button class="dropdown-toggle dropdown-input p-0 border-0" ngbDropdownToggle><img src="assets/icons/elipse.svg"></button>                                            
                 <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
