--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -518,7 +518,7 @@
               <div class="inner-content row m-0 crawl-option">
                 <div class="col-12 p-0 input-paddings">
                   <div class="kr-sg-dropdowns">      
-                    <div class="label-text">Crawl Option</div>                                  
+                    <div class="label-text">Crawl Options</div>                                  
                     <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{crwalOptionLabel}}</button>                                            
                         <ul class="dropdown-menu content-menu">
@@ -684,7 +684,7 @@
                       <div class="tooltip-custom">
                         <img src="assets/icons/info.svg">
                         <span class="tooltiptext">
-                          <div class="t-text">The maximum depth that will be allowed to crawl any site.</div>
+                          <div class="t-text">The maximum no. of URLs to be crawled.</div>
                           <div class="v-text">Value = 0 (No limit)</div>
                         </span>
                       </div> 
