--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -154,7 +154,7 @@
                             <div class="col-2 title">{{field.isRequired?'Yes':'No'}}</div>
                             <div class="col-2 title">{{field.isStored?'Yes':'No'}}</div>
                             <div class="col-2 title">{{field.isIndexed?'Yes':'No'}}
-                                <div class=" action_links text-right">
+                                <div class=" action_links text-right" style="margin-top:-15px;">
                                     <img src="assets/images/edit-pencil.svg" (click)="addEditFiled(field)">
                                     <img src="assets/icons/delete-table.svg" class="ml-3" (click)="deleteFieldPop(field)">
                                 </div>
