--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -316,3 +316,27 @@
     //     pointer-events: none;
     // }
 }
+
+.ful-page-facet{
+    margin: 15px 0 0 0;
+    .label-text{
+        color: #000000;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 19px;
+        margin-bottom: 5px;
+    }
+    .helper-text{
+        color: #9AA0A6;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 20px;
+        margin-bottom: 10px;
+    }
+    .kr-sg-toggle{
+        
+    }
+}
+.w-400{
+    width: 400px;
+}
